<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?android:attr/colorMultiSelectHighlight"
        android:theme="@style/AppTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:subtitleTextColor="@color/actionBarTextColor"
        app:title="T16 Android"
        app:titleTextAppearance="@style/ToolbarTextAppearance" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="601dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/robotStatusLabel"
        app:layout_constraintTop_toTopOf="parent">

        <com.mdp.t16_android.GridMap
            android:id="@+id/gridMap"
            android:layout_width="wrap_content"
            android:layout_height="600dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="150dp"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:stretchMode="columnWidth"
            android:visibility="visible"
            />

    </RelativeLayout>

    <ToggleButton
        android:id="@+id/fastestPathBtn"
        android:layout_width="111dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/explorationBtn"
        android:layout_marginBottom="616dp"
        android:layout_marginEnd="16dp"
        android:background="#F44336"
        android:padding="5dp"
        android:textColor="#FFFFFF"
        android:textOff="@string/startfp"
        android:textOn="@string/endfp"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/sentMessagesView"
        android:layout_width="186dp"
        android:layout_height="37dp"
        android:layout_marginBottom="56dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/border"
        android:maxLines="2"
        android:padding="5dp"
        android:scrollbars="vertical"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:background="@android:color/background_light" />

    <TextView
        android:id="@+id/connectionStatusBox"
        android:layout_width="184dp"
        android:layout_height="23dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/border"
        android:maxLines="1"
        android:padding="5dp"

        android:scrollbars="vertical"
        android:text="@string/reconfig_instruct"
        android:textSize="9sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:background="@android:color/background_light" />

    <Button
        android:id="@+id/sendPointBtn"
        android:layout_width="111dp"
        android:layout_height="60dp"
        android:layout_alignBottom="@+id/modeSwitch"
        android:layout_marginBottom="404dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/background_dark"
        android:padding="5dp"
        android:text="@string/sendPoints"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/downBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/sendPointBtn"
        android:layout_marginBottom="216dp"
        android:layout_marginEnd="50dp"
        android:contentDescription="@string/downbtn"
        android:background="@drawable/button_bg_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24px" />

    <ToggleButton
        android:id="@+id/setWayPointBtn"
        android:layout_width="111dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="476dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/holo_orange_light"
        android:padding="5dp"
        android:textColor="#FFFFFF"
        android:textOff="@string/setWaypoint"
        android:textOn="@string/onWaypoint"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ToggleButton
        android:id="@+id/explorationBtn"
        android:layout_width="111dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/robotStatusLabel"
        android:layout_marginBottom="684dp"
        android:layout_marginEnd="16dp"
        android:width="5dp"
        android:background="#4CAF50"
        android:padding="5dp"
        android:textColor="#FFFFFF"
        android:textOff="@string/startexp"
        android:textOn="@string/endexp"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Switch
        android:id="@+id/modeSwitch"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/stringCmdView"
        android:layout_marginBottom="788dp"
        android:layout_marginStart="472dp"
        android:background="@android:color/white"
        android:checked="false"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:switchPadding="10dp"
        android:text="@string/manual"
        android:textSize="10sp"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/tiltSwitch"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/stringCmdView"
        android:layout_alignTop="@+id/modeSwitch"
        android:layout_marginBottom="752dp"
        android:layout_marginStart="472dp"
        android:background="@android:color/white"
        android:checked="false"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:switchPadding="10dp"
        android:text="@string/tilt"
        android:textSize="10sp"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/stringCmdView"
        android:layout_width="372dp"
        android:layout_height="183dp"
        android:layout_alignStart="@+id/robotStatusLabel"
        android:layout_below="@+id/stringCommandLabel"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="212dp"
        android:background="@drawable/border"
        android:gravity="bottom"
        android:maxLines="9"
        android:padding="5dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/leftBtn"
        android:layout_width="39dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/fastestPathBtn"
        android:layout_alignTop="@+id/sendPointBtn"
        android:layout_marginBottom="256dp"
        android:layout_marginEnd="88dp"
        android:background="@drawable/button_bg_round"
        android:contentDescription="@string/leftbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_left_24px" />

    <ImageButton
        android:id="@+id/upBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/sendPointBtn"
        android:layout_marginBottom="296dp"
        android:layout_marginEnd="50dp"
        android:layout_toEndOf="@+id/leftBtn"
        android:background="@drawable/button_bg_round"
        android:contentDescription="@string/upbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_up_24px" />

    <TextView
        android:id="@+id/robotStatusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="192dp"
        android:layout_marginStart="16dp"
        android:paddingEnd="5dp"
        android:paddingStart="0dp"
        android:text="@string/robotstatuslbl"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sentMessagesLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="93dp"
        android:layout_marginStart="16dp"
        android:paddingEnd="5dp"
        android:paddingStart="0dp"
        android:text="@string/sentmessageslbl"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/connectionStatusLabel"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="16dp"
        android:paddingEnd="5dp"
        android:paddingStart="0dp"
        android:text="@string/connectionstatuslbl"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/rightBtn"
        android:layout_width="38dp"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/fastestPathBtn"
        android:layout_alignTop="@+id/sendPointBtn"
        android:layout_marginBottom="256dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_bg_round"
        android:contentDescription="@string/rightbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24px" />

    <TextView
        android:id="@+id/robotStatusView"
        android:layout_width="186dp"
        android:layout_height="75dp"
        android:layout_alignStart="@+id/robotStatusLabel"
        android:layout_below="@+id/robotStatusLabel"
        android:layout_marginBottom="116dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/border"
        android:gravity="bottom"
        android:maxLines="5"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:scrollbars="vertical"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/stringCommandLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/modeSwitch"
        android:layout_below="@+id/fastestPathBtn"
        android:layout_marginBottom="193dp"
        android:layout_marginStart="212dp"
        android:paddingEnd="5dp"
        android:paddingStart="0dp"
        android:text="@string/stringcommandslbl"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ToggleButton
        android:id="@+id/setStartPointBtn"
        android:layout_width="111dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="548dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/holo_orange_dark"
        android:padding="5dp"
        android:textColor="#FFFFFF"
        android:textOff="@string/setStart"
        android:textOn="@string/onStart"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="111dp"
        android:layout_height="40dp"
        android:layout_marginBottom="352dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/darker_gray"
        android:onClick="onClickUpdate"
        android:padding="5dp"
        android:text="@string/updatemap"
        android:textColor="@color/actionBarTextColor"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>